Fix patch and put methods(UserJdbcRepository)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
 # springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+logging.level.com.example.test42task=DEBUG
